第六章开始，为用户添加视图

--- a/templates/images/image/list_ajax.html
+++ b/templates/images/image/list_ajax.html
@@ -3,9 +3,9 @@
 {% for image in images %}
     <div class="image">
         <a href="{{ image.get_absolute_url }}">
-            {% thumbnail image.image "300x300" crop="100%" as im %}
-                <a href="{{ image.get.absolute_url }}">
-                    ![]({{ im.url }})
+            {% thumbnail image.image "300" as im %}
+                <a href="{{ image.image.url }}">
+                    <img src="{{ im.url }}" class="image-detail">
                 </a>
             {% endthumbnail %}
         </a>
