--- a/templates/images/image/detail.html
+++ b/templates/images/image/detail.html
@@ -7,7 +7,7 @@
     {% load thumbnail %}
     {% thumbnail image.image "300" as im %}
         <a href="{{ image.image.url }}">
-        ![]({{ im.url }})
+            <img src="{{ im.url }}" class="image-detail">
         </a>
     {% endthumbnail %}
     {% with total_likes=image.users_like.count users_like=image.users_like.all %}
