完成，图片detail.html,like增加JS出现错误

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,13 +46,8 @@
         {% block content %}
         {% endblock %}
     </div>
-<script
-  src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous">
-</script>
-<script src=" http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.
-cookie.min.js "></script>
+<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+<script src=" http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
 <script>
     var csrftoken = $.cookie('csrftoken');
     function csrfSafeMethod(method) {
