--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -16,4 +16,11 @@ Dashboard
     您可以<a href="{% url "edit" %}">编辑您的个人资料</a>
     或者 <a href="{% url "password_change" %}">修改密码</a>
     </p>
+    <h2>发生了什么</h2>
+    <div id="action-list">
+        {% for action in actions %}
+            {% include "actions/action/detail.html" %}
+        {% endfor %}
+
+    </div>
 {% endblock %}
