--- a/templates/images/image/detail.html
+++ b/templates/images/image/detail.html
@@ -17,6 +17,10 @@
                         <span class="total">{{ total_likes }}</span>
                         like{{ total_likes|pluralize }}
                     </span>
+                    <span class="count">
+                        <span class="total">{{ total_views }}</span>
+                        view{{ total_views|pluralize }}
+                    </span>
                     <a href="#" data-id="{{ image.id }}" data-action="{% if request.user in users_like %}un{% endif %}like" class="like button">
                         {% if request.user not in users_like %}
                             Like
@@ -24,13 +28,14 @@
                             Unlike
                         {% endif %}
                     </a>
-                 </div>
-                 {{ image.description|linebreaks }}
+                </div>
+            {{ image.description|linebreaks }}
         </div>
+
         <div class="image-likes">
             {% for user in image.users_like.all %}
                 <div>
-                    ![]({{ user.profile.photo.url }})
+                    <img src="{{ user.profile.photo.url }}">
                     <p>{{ user.first_name }}</p>
                 </div>
             {% empty %}
